--- a/src/components/messages/Messages.css
+++ b/src/components/messages/Messages.css
@@ -19,6 +19,10 @@
     margin-right: 1em
 }
 
+.delete-btn {
+    background-color: rgb(238, 79, 79);
+}
+
 .form-text-box {
     width: 50vw;
     overflow-wrap: break-word;
