--- a/src/components/event/Event.css
+++ b/src/components/event/Event.css
@@ -10,3 +10,11 @@
       padding: 1em;
       border: 1px solid goldenrod;
   }
+
+  .event:first-child {
+    flex-basis: 28%;
+    margin: 1em;
+    padding: 1em;
+    border: 4px solid goldenrod;
+    font-weight: bold;
+}
